--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,6 +78,37 @@ jobs:
       - name: Publish binaries
         run: dotnet publish -c Release -r ${{ matrix.rid }} --self-contained false -o ./publish/${{ matrix.target }}
 
+      - name: Rename binaries with version, date, and build number
+        run: |
+          DATE=$(date +'%Y-%m-%d')
+          BUILD=$GITHUB_RUN_NUMBER
+          VERSION=$(dotnet msbuild MyProject.csproj -nologo -t:GetProperty -p:Property=Version -v:q)
+
+          # Linux
+          if [[ "${{ matrix.target }}" == "linux" ]]; then
+            mv ./publish/linux/MyApp ./publish/linux/MyApp_${DATE}_${VERSION}_${BUILD}.bin
+          fi
+
+          # macOS
+          if [[ "${{ matrix.target }}" == "mac" ]]; then
+            mv ./publish/mac/MyApp ./publish/mac/MyApp_${DATE}_${VERSION}_${BUILD}.app
+          fi
+
+          # Windows
+          if [[ "${{ matrix.target }}" == "win" ]]; then
+            mv ./publish/windows/MyApp.exe ./publish/windows/MyApp_${DATE}_${VERSION}_${BUILD}.exe
+          fi
+
+          # iOS
+          if [[ "${{ matrix.target }}" == "ios" ]]; then
+            mv ./publish/ios/MyApp.ipa ./publish/ios/MyApp_${DATE}_${VERSION}_${BUILD}.ipa
+          fi
+
+          # Android
+          if [[ "${{ matrix.target }}" == "android" ]]; then
+            mv ./publish/android/MyApp.apk ./publish/android/MyApp_${DATE}_${VERSION}_${BUILD}.apk
+          fi
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -130,11 +161,11 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            ./dist/**/*.exe
-            ./dist/**/*.bin
             ./dist/**/*.apk
-            ./dist/**/*.ipa
             ./dist/**/*.app
+            ./dist/**/*.ipa
+            ./dist/**/*.bin
+            ./dist/**/*.exe
             ./dist/*.zip
           fail_on_unmatched_files: false
           append_body: false
