--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,9 +80,11 @@ jobs:
         run: |
           DATE=$(date +'%Y-%m-%d')
           BUILD=$GITHUB_RUN_NUMBER
-          VERSION=$(dotnet msbuild MyProject.csproj -nologo -t:GetProperty -p:Property=Version -v:q)
+          PROJECT_FILE=$(find . -maxdepth 1 -name "*.csproj" | head -n 1)
+          APP_NAME=$(basename "$PROJECT_FILE" .csproj)
+          VERSION=$(dotnet msbuild "$PROJECT_FILE" -nologo -t:GetProperty -p:Property=Version -v:q)
 
-          mv ./publish/${{ matrix.target }}/MyApp ./publish/${{ matrix.target }}/MyApp_${DATE}_${VERSION}_${BUILD}.${{ matrix.ext }}
+          mv ./publish/${{ matrix.target }}/$APP_NAME ./publish/${{ matrix.target}}/${APP_NAME}_${DATE}_${VERSION}_${BUILD}${{ matrix.ext }}
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
