--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,13 +78,14 @@ jobs:
 
       - name: Rename binaries with version, date, and build number
         run: |
+          ls ./publish/${{ matrix.target }}
+          echo $GITHUB_RUN_NUMBER
+          echo $(date +'%Y-%m-%d')
           DATE=$(date +'%Y-%m-%d')
           BUILD=$GITHUB_RUN_NUMBER
-          PROJECT_FILE=$(find . -maxdepth 1 -name "*.csproj" | head -n 1)
-          APP_NAME=$(basename "$PROJECT_FILE" .csproj)
-          VERSION=$(dotnet msbuild "$PROJECT_FILE" -nologo -t:GetProperty -p:Property=Version -v:q)
+          VERSION=$(dotnet msbuild struttura.csproj -nologo -t:GetProperty -p:Property=Version -v:q)
 
-          mv ./publish/${{ matrix.target }}/$APP_NAME ./publish/${{ matrix.target}}/${APP_NAME}_${DATE}_${VERSION}_${BUILD}${{ matrix.ext }}
+          mv ./publish/${{ matrix.target }}/struttura ./publish/${{ matrix.target}}/${APP_NAME}_${DATE}_${VERSION}_${BUILD}${{ matrix.ext }}
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
