Rename binaries with version, date, and build number

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,13 @@ jobs:
         with:
           dotnet-version: '9.0.306'
 
+      - name: Install .NET tools
+        run: |
+          dotnet tool install --global dotnet-xdt --version 2.*
+          dotnet tool install --global dotnet-date --version 1.*
+        env:
+          PATH: $PATH:/home/runner/.dotnet/tools
+
       - name: Setup Java (for Android builds)
         if: matrix.target == 'android'
         uses: actions/setup-java@v4
@@ -80,28 +87,28 @@ jobs:
         run: dotnet publish -c Release -r ${{ matrix.rid }} --self-contained false -o ./publish/${{ matrix.target }}
 
       - name: Rename binaries with version, date, and build number
+        env:
+          PATH: $PATH:/home/runner/.dotnet/tools
         run: |
-          DATE=$(date +'%Y-%m-%d')
-          echo "Date is : $DATE"
-
-          BUILD=$GITHUB_RUN_NUMBER
-          echo "GITHUB_RUN_NUMBER is : $BUILD"
-
-          echo "GITHUB_RUN_ATTEMPT is : $GITHUB_RUN_ATTEMPT"
-
           PROJECT_FILE=$(find . -maxdepth 1 -name "*.csproj" | head -n 1)
-          echo "PROJECT_FILE is : $PROJECT_FILE"
-
+          echo "PROJECT_FILE is $PROJECT_FILE"
           APP_NAME=$(basename "$PROJECT_FILE" .csproj)
-          echo "APP_NAME is : $APP_NAME"
+          echo "APP_NAME is $APP_NAME"
 
-          VERSION=$(grep -oPm1 "(?<=<Version>)[^<]+" "$PROJECT_FILE" || echo "0.0.0")
-          echo "VERSION is : $VERSION"
+          VERSION=$(dotnet xdt select -f "$PROJECT_FILE" -x "/Project/PropertyGroup/Version/text()" || echo "0.0.0")
+          echo "VERSION is $VERSION"
+          DATE=$(dotnet date -f yyyy-MM-dd)
+          echo "DATE is $DATE"
+          BUILD=$GITHUB_RUN_NUMBER
+          echo "BUILD is $BUILD"
 
-          echo "source is : ./publish/${{ matrix.target }}/$APP_NAME"
-          echo "destination is : .."
+          SRC="./publish/${{ matrix.target }}/$APP_NAME"
+          echo "SRC is $SRC"
+          DST="./publish/${{ matrix.target}}/${APP_NAME}_${DATE}_${VERSION}_${BUILD}.${{ matrix.ext }}"
+          echo "DST is $DST"
 
-          mv ./publish/${{ matrix.target }}/$APP_NAME ./publish/${{ matrix.target}}/${APP_NAME}_${DATE}_${VERSION}_${BUILD}${{ matrix.ext }}
+          echo "Renaming $SRC → $DST"
+          mv "$SRC" "$DST" || (echo "Rename failed: source file missing" && exit 1)
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
