--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,7 +80,6 @@ jobs:
         run: dotnet publish -c Release -r ${{ matrix.rid }} --self-contained false -o ./publish/${{ matrix.target }}
 
       - name: Rename binaries with version, date, and build number
-        shell: bash
         run: |
           PROJECT_FILE=$(find . -maxdepth 1 -name "*.csproj" | head -n 1)
           APP_NAME=$(basename "$PROJECT_FILE" .csproj)
@@ -88,19 +87,15 @@ jobs:
           # Extract version from csproj
           VERSION=$(grep -oPm1 "(?<=<Version>)[^<]+" "$PROJECT_FILE" || echo "0.0.0")
 
-          # Use .NET to generate date (cross-platform)
-          DATE=$(dotnet new console -o tempdate --force > /dev/null 2>&1 \
-            && echo 'using System; Console.Write(DateTime.UtcNow.ToString("yyyy-MM-dd"));' > tempdate/Program.cs \
-            && dotnet run --project tempdate --no-build --nologo)
-
-          rm -rf tempdate
+          # Cross-platform date using PowerShell Core
+          DATE=$(pwsh -Command "[DateTime]::UtcNow.ToString('yyyy-MM-dd')")
 
           BUILD=$GITHUB_RUN_NUMBER
 
           SRC="./publish/${{ matrix.target }}/$APP_NAME"
-          DST="./publish/${{ matrix.target}}/${APP_NAME}_${DATE}_${VERSION}_${BUILD}.${{ matrix.ext }}"
+          DST="./publish/${{ matrix.target}}/${APP_NAME}_${DATE}_${VERSION}_${BUILD}${{ matrix.ext }}"
 
-          echo "Renaming $SRC to $DST"
+          echo "Renaming $SRC → $DST"
           mv "$SRC" "$DST" || (echo "Rename failed: source file missing" && exit 1)
 
       - name: Upload build artifacts
