--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,8 +87,10 @@ jobs:
           SRC="./publish/${{ matrix.target }}/$APP_NAME"
           DST="./publish/${{ matrix.target}}/${APP_NAME}.${{ matrix.ext }}"
 
-          echo "Renaming $SRC → $DST"
-          mv "$SRC" "$DST" || (echo "Rename failed: source file missing" && exit 1)
+          if [[ "${{ matrix.target }}" == "linux" || "${{ matrix.target }}" == "mac" ]]; then
+            echo "Renaming $SRC → $DST"
+            mv "$SRC" "$DST" || (echo "Rename failed: source file missing" && exit 1)
+          fi
         shell: bash
 
       - name: Upload build artifacts
