--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,10 +32,12 @@ jobs:
             os: macos-latest
             rid: ios-arm64
             ext: ipa
+            allow_failure: true
           - target: android
             os: ubuntu-latest
             rid: android-arm64
             ext: apk
+            allow_failure: true
     permissions:
       contents: write
 
@@ -84,6 +86,7 @@ jobs:
       - name: Rename binaries
         shell: pwsh
         run: |
+          Get-ChildItem | Write-Host ;
           $projectFile = Get-ChildItem -Filter *.csproj | Select-Object -First 1
           $appName = [System.IO.Path]::GetFileNameWithoutExtension($projectFile.Name)
           $ext = "${{ matrix.ext }}"
