--- a/struttura.csproj
+++ b/struttura.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <TargetName>struttura</TargetName>
     <Version>1.2.3</Version>
     <FileVersion>1.2.3.0</FileVersion>
     <AssemblyVersion>1.2.0.0</AssemblyVersion>
