--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,12 +81,14 @@ jobs:
 
       - name: Publish binaries
         shell: pwsh
-        run:
-          dotnet publish -c Release -r ${{ matrix.rid }} --self-contained false -o "./publish/${{ matrix.target }}" --property:TARGETNAME="struttuBa.${{ matrix.ext }}"
+        run: dotnet publish -c Release -r ${{ matrix.rid }} --self-contained false -o "./publish/${{ matrix.target }}"
 
       - name: Rename binaries
         shell: pwsh
         run: |
+          if (Get-ChildItem -Filter "*.${{ matrix.ext }}" | Select-Object -First 1)) {
+            exit 0 ;
+          }
           Write-Host "Recurse listing : "
           Get-ChildItem "./publish/" -Recurse | Write-Host ;
           $projectFile = Get-ChildItem -Filter *.csproj | Select-Object -First 1
