--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,9 +86,7 @@ jobs:
       - name: Rename binaries
         shell: pwsh
         run: |
-          Get-ChildItem "./publish/$target/" -Filter "*.${{ matrix.ext }}" | Write-Host ;
-          Get-ChildItem "./publish/$target/" -Recurse -Filter "*.${{ matrix.ext }}" | Write-Host ;
-          if (Get-ChildItem "./publish/$target/" -Filter "*.${{ matrix.ext }}" | Select-Object -First 1) {
+          if (Get-ChildItem "./publish/$target/" -Recurse -Filter "*.${{ matrix.ext }}" | Select-Object -First 1) {
             Write-Host "wtf ?!"
             exit 0 ;
           }
