--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,25 +86,23 @@ jobs:
       - name: Rename binaries
         shell: pwsh
         run: |
-          if (Get-ChildItem "./publish/$target/" -Recurse -Filter "*.${{ matrix.ext }}" | Select-Object -First 1) {
-            Write-Host "wtf ?!"
+          $projectFile = Get-ChildItem -Filter *.csproj | Select-Object -First 1
+          $appBaseName = [System.IO.Path]::GetFileNameWithoutExtension($projectFile.Name)
+
+          Get-ChildItem "./publish/" -Recurse | Write-Host ;
+          if (Get-ChildItem "./publish/${{ matrix.target }}/" -Filter "$appBaseName.${{ matrix.ext }}" | Select-Object -First 1) {
             exit 0 ;
           }
           else {
-            Write-Host "Recurse listing : "
-            Get-ChildItem "./publish/" -Recurse | Write-Host ;
-            $projectFile = Get-ChildItem -Filter *.csproj | Select-Object -First 1
-            $appName = [System.IO.Path]::GetFileNameWithoutExtension($projectFile.Name)
-            $ext = "${{ matrix.ext }}"
-            $target = "${{ matrix.target }}"
-            $src = "./publish/$target/$appName"
-            $dst = "$appName.$ext"
-            if (-Not (Test-Path $src)) {
-                Write-Error "Source file missing: $src"
+
+            $path = "./publish/${{ matrix.target }}/$appBaseName"
+            $NewName = "$appBaseName.${{ matrix.ext }}"
+            if (-Not (Test-Path $path)) {
+                Write-Error "Source file missing: $path"
                 exit 1
             }
-            Write-Host "Renaming $src to $dst"
-            Rename-Item -Path $src -NewName $dst -Force
+            Write-Host "Renaming $path to $NewName"
+            Rename-Item -Path $path -NewName $NewName -Force
           }
 
       - name: Upload Artifact
