--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,12 +28,12 @@ jobs:
             os: macos-latest
             rid: osx-x64
             ext: appbundle
-          - target: ios
-            os: macos-latest
-            rid: ios-arm64
-            ext: ipa
-            allow_failure: true
-            continue-on-error: true
+          # - target: ios
+          #   os: macos-latest
+          #   rid: ios-arm64
+          #   ext: ipa
+          #   allow_failure: true
+          #   continue-on-error: true
           - target: android
             os: ubuntu-latest
             rid: android-arm64
