--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -121,8 +121,8 @@ jobs:
 
           $NewName = "$ApplicationBaseName_${{ matrix.rid }}.${{ matrix.ext }}"
           
-          Write-Host "Renaming $(GeneratedExecutable.FullName) to $NewName"
-          Rename-Item -Path $(GeneratedExecutable.FullName) -NewName $NewName -Force
+          Write-Host "Renaming $($GeneratedExecutable.FullName) to $NewName"
+          Rename-Item -Path $($GeneratedExecutable.FullName) -NewName $NewName -Force
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
